--- a/list01.html
+++ b/list01.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "list01.css"], "outOfDate":[]};
 </script>
   
-  <title>home</title>
+  <title>list01</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038565194"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-a.css?crc=3988590560"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3934797375" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/list01.css?crc=3921383019" id="pagesheet"/>
    </head>
  <body>
 
@@ -28,9 +28,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
    <div class="clearfix grpelem" id="pu108"><!-- column -->
     <div class="clearfix colelem" id="u108"><!-- group -->
-     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u157-5" href="index.html"><!-- content --><p>&nbsp;<span id="u157-2">ZZORGE</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u157-5" href="index.html"><!-- content --><p>&nbsp;<span id="u157-2">ZZORGE</span></p></a>
     </div>
-    <a class="nonblock nontext clearfix colelem" id="u160-4" href="list01.html"><!-- content --><p>&nbsp;Страница 1</p></a>
+    <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u160-4" href="list01.html"><!-- content --><p>&nbsp;Страница 1</p></a>
     <a class="nonblock nontext clearfix colelem" id="u188-4" href="list02.html"><!-- content --><p>&nbsp;Страница 2</p></a>
     <a class="nonblock nontext clearfix colelem" id="u191-4" href="list03.html"><!-- content --><p>&nbsp;Страница 3</p></a>
     <a class="nonblock nontext clearfix colelem" id="u194-4" href="list04.html"><!-- content --><p>&nbsp;Страница 4</p></a>
@@ -50,25 +50,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p>&nbsp;</p>
      </div>
      <div class="clearfix grpelem" id="u200"><!-- group -->
-      <div class="clearfix grpelem" id="u263-38"><!-- content -->
-       <p>Текст домашней страницы Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы</p>
+      <div class="clearfix grpelem" id="u251-17"><!-- content -->
+       <p>Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1</p>
+       <p>&nbsp;</p>
+       <p>Текст страницы 1 Текст страницы 1 Текст страницы 1 Текст страницы 1</p>
+       <p>Текст страницы 1 Текст страницы 1</p>
+       <p>Текст страницы 1 Текст страницы 1</p>
+       <p>Текст страницы 1</p>
+       <p>Текст страницы 1</p>
+       <p>Текст страницы 1</p>
       </div>
      </div>
     </div>
