--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <p>Текст домашней страницы</p>
        <p>Текст домашней страницы Текст домашней страницы</p>
        <p>Текст домашней страницы Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы</p>
+       <p>1Текст домашней страницы Текст домашней страницы</p>
+       <p>2Текст домашней страницы</p>
       </div>
      </div>
     </div>
