--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <p>Текст домашней страницы Текст домашней страницы</p>
        <p>Текст домашней страницы Текст домашней страницы Текст домашней страницы</p>
        <p>Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы</p>
-       <p>Текст домашней страницы Текст домашней страницы Текст домашней страницы</p>
+       <p>5Текст домашней страницы</p>
+       <p>4Текст домашней страницы Текст домашней страницы</p>
+       <p>3Текст домашней страницы Текст домашней страницы Текст домашней страницы</p>
        <p>1Текст домашней страницы Текст домашней страницы</p>
        <p>2Текст домашней страницы</p>
       </div>
